[gd_scene load_steps=4 format=3 uid="uid://c3llxdo0o6347"]

[ext_resource type="Script" path="res://main.gd" id="1_0hdqx"]
[ext_resource type="Texture2D" uid="uid://bqxvgxqh47ufx" path="res://sunny-land-phaser-project/sunny-land/assets/sprites/title-screen.png" id="2_1mjxk"]
[ext_resource type="Script" path="res://GameTitle.gd" id="8_title"]

[sub_resource type="Environment" id="Environment_1abc2"]
background_mode = 1
background_color = Color(0.3, 0.6, 0.9, 1)

[node name="Main" type="Node2D"]
script = ExtResource("1_0hdqx")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1abc2")

[node name="TitleSprite" type="Sprite2D" parent="."]
position = Vector2(576, 200)
texture = ExtResource("2_1mjxk")

[node name="UI" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 50.0
offset_right = 100.0
offset_bottom = 200.0

[node name="PlayButton" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="QuitButton" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="HighScoreLabel" type="Label" parent="UI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -50.0
offset_right = 200.0
text = "High Score: 0 | Best Distance: 0m"
horizontal_alignment = 1

[node name="GameTitleLabel" type="Label" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = -150.0
text = "SKY RUNNER ADVENTURES"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("8_title")

[node name="InstructionsLabel" type="Label" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -100.0
offset_right = 400.0
offset_bottom = -50.0
text = "Controls: SPACE/UP to Jump, ESC to Pause"
horizontal_alignment = 1