[gd_scene load_steps=3 format=3 uid="uid://c3llxdo0o6347"]

[ext_resource type="Script" uid="uid://chcak0dai4cnx" path="res://main.gd" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://b4bgaxksdcx55" path="res://BG.tscn" id="2_0xm2m"]

[node name="Main" type="Node2D"]
script = ExtResource("1_ig7tw")

[node name="Play" type="Button" parent="."]
modulate = Color(0.145098, 1, 1, 1)
self_modulate = Color(0, 0.744498, 0.471209, 1)
offset_left = 499.0
offset_top = 299.0
offset_right = 638.0
offset_bottom = 351.0
tooltip_text = "Click to Play Game"
text = "Play"
icon_alignment = 1

[node name="Quit" type="Button" parent="."]
modulate = Color(0.532048, 0.042725, 0.267677, 1)
offset_left = 504.0
offset_top = 406.0
offset_right = 643.0
offset_bottom = 455.0
tooltip_text = "Click to Quit Game"
text = "Quit
"
icon_alignment = 1

[node name="ParallaxBackground" parent="." instance=ExtResource("2_0xm2m")]

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_button_2_pressed"]
